codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__actor_model_context_input.snap
---
source: tui/src/chatwidget/tests/actor_model_tests.rs
expression: "render_bottom_popup(&chat, 80)"
---
▌ Context length for qwen3-coder-30b-a3b-instruct
▌ LM Studio model: qwen3-coder-30b-a3b-instruct. Maximum: 262144 tokens.
▌
▌ Enter a positive token count and press Enter

Press enter to confirm or esc to go back
