codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__actor_model_success_transition.snap
---
source: tui/src/chatwidget/tests/actor_model_tests.rs
expression: history_snapshot(&mut rx)
---
• Local actor model set to qwen3-coder-30b-a3b-instruct with a 32768-token context.
